update home page style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,7 +50,7 @@
   }
   
 .grad-to-right {
-    background-image: linear-gradient(229deg, rgba(9,15,59,1) 23%, rgba(11,19,75,1) 53%, rgba(32,40,101,1) 83%);;
+    background-image: linear-gradient(229deg, rgba(9,15,59,1) 23%, rgba(11,19,75,1) 53%, rgba(32,40,101,1) 83%);
   }
   
   
