--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Montserrat:wght@100;200;300;400;600;700;800;900&display=swap');
+
 
 *, html, body {
   scroll-behavior: smooth;
@@ -65,10 +67,38 @@
 }
 
 @layer base {
+  h1 {
+    @apply font-montserrat;
+  }
+  h2 {
+    @apply font-montserrat;
+  }
+  h3 {
+    @apply font-inter;
+  }
+  p {
+    @apply font-asap;
+  }
+  li {
+    @apply font-asap;
+  }
+  button {
+    @apply font-inter;
+  }
+
+  html {
+    @apply scroll-smooth
+  }
   .parent:hover .child {
     @apply transition;
     @apply translate-x-[-100%];
     @apply duration-300;
+    @apply delay-150;
+  }
+
+  .parent:hover .child-text {
+    @apply transition-colors;
+    @apply text-blue;
     @apply delay-150;
   }
 }
@@ -76,10 +106,5 @@
 @layer utilities {
   .pause-animation {
     animation-play-state: paused;
-  }
-
-  .parent:hover .child {
-    
-
   }
 }
