--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@
     background-image: linear-gradient(229deg, rgba(9,15,59,1) 23%, rgba(11,19,75,1) 53%, rgba(32,40,101,1) 83%);
   }
 .grad-to-top {
-    background-image: linear-gradient(to top, #F6792E, #D93C29, #D42F27);
+    background-image: linear-gradient(to top, rgba(9,15,59,1) 23%, rgba(11,19,75,1) 53%, rgba(32,40,101,1) 83%);
   }
   
 .grad-to-right {
